--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 {% load static %}
@@ -8,37 +7,54 @@
 {% endblock %}
 
 {% block content %}
-  
   <div class="container">
     <h1>Posts</h1>
 
-  {% if posts %}
-  <table class="table">
-  <thead class="thead-dark">
-      <tr>
-        <th>#</th>
-        <th>작성자</th>
-        <th>본문</th>
-        <th>게시일</th>
-        <th>상세</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for post in posts %}
-      <tr>
-        <th>{{ post.id }}</th>
-        <td>{{ post.user.get_username }}</td>
-        <td>{{ post.body }}</td>
-        <td>{{ post.created_at }}</td>
-        <td><a href="{% url 'posts:detail' post.id %}">보기</a></td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  {% else %}
-    <p>No Posts.</p>
-  {% endif %}
+    {% if posts %}
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th>#</th>
+          <th>작성자</th>
+          <th>본문</th>
+          <th>게시일</th>
+          <th>상세</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for post in posts %}
+        <tr>
+          <th>{{ post.id }}</th>
+          <td>{{ post.user.get_username }}</td>
+          <td>{{ post.body }}</td>
+          <td>{{ post.created_at }}</td>
+          <td><a href="{% url 'posts:detail' post.id %}">보기</a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% else %}
+      <p>No Posts.</p>
+    {% endif %}
 
-  <a href="{% url 'posts:new' %}">글쓰기</a>
-{% endblock %}
+    <a href="{% url 'posts:new' %}">글쓰기</a>
   </div>
+
+  {% if dog %}
+    <div class="container">
+      <div class="card">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img class="card-img" src="{{ dog }}" alt="Random Dog Image">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">강아지를 보고 싶다면?</h5>
+              <p class="card-text">Dog API를 활용합시다.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+{% endblock %}
